--- a/package.json
+++ b/package.json
@@ -1,12 +1,26 @@
 {
-  "name": "tools",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+    "name": "tools",
+    "type": "module",
+    "version": "1.0.0",
+    "packageManager": "pnpm@10.26.1",
+    "description": "",
+    "author": "",
+    "license": "ISC",
+    "keywords": [],
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "crawler": "tsx crawler/index.ts",
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix"
+    },
+    "devDependencies": {
+        "@antfu/eslint-config": "^6.7.3",
+        "@swc/core": "^1.15.7",
+        "@types/node": "^25.0.3",
+        "eslint": "^9.39.2",
+        "prettier": "^3.7.4",
+        "tsx": "^4.21.0",
+        "typescript": "^5.9.3"
+    }
 }
