--- a/package.json
+++ b/package.json
@@ -9,18 +9,26 @@
     "keywords": [],
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "echo 'No tests configured'",
         "crawler": "tsx crawler/index.ts",
         "lint": "eslint .",
-        "lint:fix": "eslint . --fix"
+        "lint:fix": "eslint . --fix",
+        "prepare": "husky install",
+        "precommit": "tsc --noEmit --skipLibCheck && eslint . --fix"
     },
     "devDependencies": {
         "@antfu/eslint-config": "^6.7.3",
         "@swc/core": "^1.15.7",
         "@types/node": "^25.0.3",
         "eslint": "^9.39.2",
+        "husky": "^9.1.7",
+        "lint-staged": "^16.2.7",
         "prettier": "^3.7.4",
         "tsx": "^4.21.0",
         "typescript": "^5.9.3"
+    },
+    "lint-staged": {
+        "**/*.{ts,tsx}": "tsc --noEmit --skipLibCheck",
+        "**/*.{ts,tsx,js}": "eslint --fix"
     }
 }
