--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
         "lint": "eslint .",
         "lint:fix": "eslint . --fix",
         "prepare": "husky install",
-        "precommit": "tsc --noEmit --skipLibCheck && eslint . --fix"
+        "precommit": "tsc --noEmit --skipLibCheck"
     },
     "devDependencies": {
         "@antfu/eslint-config": "^6.7.3",
         "@swc/core": "^1.15.7",
         "@types/node": "^25.0.3",
+        "consola": "^3.4.2",
+        "dotenv": "^17.2.3",
         "eslint": "^9.39.2",
         "husky": "^9.1.7",
         "lint-staged": "^16.2.7",
