feat: web project init

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["crawler/**/*.ts", "src/**/*.ts", "src/**/*.tsx"],
+  "include": ["crawler/**/*.ts", "src/**/*.ts", "src/**/*.tsx", "web/**/*.ts", "web/**/*.tsx"],
   "exclude": ["node_modules", "dist", "**/node_modules/*", "**/*.test.ts", "tmp"],
   // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
