--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
         "eslint-plugin-react": "^7.37.5",
         "eslint-plugin-react-hooks": "^7.0.1",
         "globals": "^16.5.0",
+        "terser": "^5.44.1",
         "typescript": "~5.9.3",
         "vite": "^7.2.4"
     },
