--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,8 @@
         "dev": "vite",
         "build": "tsc -b && vite build",
         "lint": "eslint .",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "gen-css-types": "tcm src --watch"
     },
     "dependencies": {
         "@ant-design/icons": "^6.1.0",
@@ -27,6 +28,7 @@
         "eslint-plugin-react-hooks": "^7.0.1",
         "globals": "^16.5.0",
         "terser": "^5.44.1",
+        "typed-css-modules": "^0.9.1",
         "typescript": "~5.9.3",
         "vite": "^7.2.4"
     },
